// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/homebrew/extract extractPackageFile() extracts "archive" github dependency 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "v0.8.2",
      "datasource": "github-tags",
      "depName": "bazelbuild/bazel-watcher",
      "managerData": Object {
        "ownerName": "bazelbuild",
        "repoName": "bazel-watcher",
        "sha256": "26f5125218fad2741d3caf937b02296d803900e5f153f5b1f733f15391b9f9b4",
        "url": "https://github.com/bazelbuild/bazel-watcher/archive/v0.8.2.tar.gz",
      },
    },
  ],
}
`;

exports[`manager/homebrew/extract extractPackageFile() extracts "releases" github dependency 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "v0.16.1",
      "datasource": "github-tags",
      "depName": "aide/aide",
      "managerData": Object {
        "ownerName": "aide",
        "repoName": "aide",
        "sha256": "0f2b7cecc70c1a27d35c06c98804fcdb9f326630de5d035afc447122186010b7",
        "url": "https://github.com/aide/aide/releases/download/v0.16.1/aide-0.16.1.tar.gz",
      },
    },
  ],
}
`;

exports[`manager/homebrew/extract extractPackageFile() handles no space before class header 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "v0.8.2",
      "datasource": "github-tags",
      "depName": "bazelbuild/bazel-watcher",
      "managerData": Object {
        "ownerName": "bazelbuild",
        "repoName": "bazel-watcher",
        "sha256": "26f5125218fad2741d3caf937b02296d803900e5f153f5b1f733f15391b9f9b4",
        "url": "https://github.com/bazelbuild/bazel-watcher/archive/v0.8.2.tar.gz",
      },
    },
  ],
}
`;

exports[`manager/homebrew/extract extractPackageFile() skips github dependency with wrong format 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": null,
      "datasource": null,
      "depName": "Acmetool",
      "managerData": Object {
        "ownerName": null,
        "repoName": null,
        "sha256": "6f2cf5cfb987a2df2f791c162209039804fd8fd12692da69f52153ec9668e9ca",
        "url": "https://github.com/hlandau/acme.git",
      },
      "skipReason": "unsupported-url",
    },
  ],
}
`;

exports[`manager/homebrew/extract extractPackageFile() skips if invalid url 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": null,
      "datasource": null,
      "depName": "Ibazel",
      "managerData": Object {
        "ownerName": null,
        "repoName": null,
        "sha256": "26f5125218fad2741d3caf937b02296d803900e5f153f5b1f733f15391b9f9b4",
        "url": "invalid_url",
      },
      "skipReason": "unsupported-url",
    },
  ],
}
`;

exports[`manager/homebrew/extract extractPackageFile() skips if invalid url extension 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "v0.8.2.not_tar.not_gz",
      "datasource": "github-tags",
      "depName": "bazelbuild/bazel-watcher",
      "managerData": Object {
        "ownerName": "bazelbuild",
        "repoName": "bazel-watcher",
        "sha256": "26f5125218fad2741d3caf937b02296d803900e5f153f5b1f733f15391b9f9b4",
        "url": "https://github.com/bazelbuild/bazel-watcher/archive/v0.8.2.not_tar.not_gz",
      },
    },
  ],
}
`;

exports[`manager/homebrew/extract extractPackageFile() skips if invalid url protocol 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": null,
      "datasource": null,
      "depName": "Ibazel",
      "managerData": Object {
        "ownerName": null,
        "repoName": null,
        "sha256": "26f5125218fad2741d3caf937b02296d803900e5f153f5b1f733f15391b9f9b4",
        "url": null,
      },
      "skipReason": "unsupported-url",
    },
  ],
}
`;

exports[`manager/homebrew/extract extractPackageFile() skips if invalid url version 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "vInvalid.version.2",
      "datasource": "github-tags",
      "depName": "bazelbuild/bazel-watcher",
      "managerData": Object {
        "ownerName": "bazelbuild",
        "repoName": "bazel-watcher",
        "sha256": "26f5125218fad2741d3caf937b02296d803900e5f153f5b1f733f15391b9f9b4",
        "url": "https://github.com/bazelbuild/bazel-watcher/archive/vInvalid.version.2.tar.gz",
      },
    },
  ],
}
`;

exports[`manager/homebrew/extract extractPackageFile() skips if sha256 field is invalid 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "v0.8.2",
      "datasource": "github-tags",
      "depName": "bazelbuild/bazel-watcher",
      "managerData": Object {
        "ownerName": "bazelbuild",
        "repoName": "bazel-watcher",
        "sha256": "26f5125218fad2741d3caf937b0229",
        "url": "https://github.com/bazelbuild/bazel-watcher/archive/v0.8.2.tar.gz",
      },
      "skipReason": "invalid-sha256",
    },
  ],
}
`;

exports[`manager/homebrew/extract extractPackageFile() skips if there is no sha256 field 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "v0.8.2",
      "datasource": "github-tags",
      "depName": "bazelbuild/bazel-watcher",
      "managerData": Object {
        "ownerName": "bazelbuild",
        "repoName": "bazel-watcher",
        "sha256": null,
        "url": "https://github.com/bazelbuild/bazel-watcher/archive/v0.8.2.tar.gz",
      },
      "skipReason": "invalid-sha256",
    },
  ],
}
`;

exports[`manager/homebrew/extract extractPackageFile() skips if there is no url field 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": null,
      "datasource": null,
      "depName": "Ibazel",
      "managerData": Object {
        "ownerName": null,
        "repoName": null,
        "sha256": "26f5125218fad2741d3caf937b02296d803900e5f153f5b1f733f15391b9f9b4",
        "url": null,
      },
      "skipReason": "unsupported-url",
    },
  ],
}
`;

exports[`manager/homebrew/extract extractPackageFile() skips sourceforge dependency 1 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": null,
      "datasource": null,
      "depName": "Aalib",
      "managerData": Object {
        "ownerName": null,
        "repoName": null,
        "sha256": "fbddda9230cf6ee2a4f5706b4b11e2190ae45f5eda1f0409dc4f99b35e0a70ee",
        "url": "https://downloads.sourceforge.net/aa-project/aalib-1.4rc5.tar.gz",
      },
      "skipReason": "unsupported-url",
    },
  ],
}
`;

exports[`manager/homebrew/extract extractPackageFile() skips sourceforge dependency 2 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": null,
      "datasource": null,
      "depName": "Aap",
      "managerData": Object {
        "ownerName": null,
        "repoName": null,
        "sha256": "3f53b2fc277756042449416150acc477f29de93692944f8a77e8cef285a1efd8",
        "url": "https://downloads.sourceforge.net/project/a-a-p/aap-1.094.zip",
      },
      "skipReason": "unsupported-url",
    },
  ],
}
`;
